--- a/css/foxnetsimplegrid.css
+++ b/css/foxnetsimplegrid.css
@@ -54,6 +54,7 @@ img {
 	max-width: 64em;
 }
 .row .col-1-3,
+.row .col-2-3,
 .row .col-1-4,
 .row .col-1-2,
 .row .col-3-4,
@@ -62,16 +63,22 @@ img {
 	padding-right: 1.25em; /* 20px / 16px = 1.25 */
 }
 .row .col-1-3:last-of-type,
+.row .col-2-3:last-of-type,
 .row .col-1-4:last-of-type,
 .row .col-1-2:last-of-type,
 .row .col-3-4:last-of-type,
 .row .col-1-1:last-of-type {
+	float: right;
 	padding-right: 0;
 }
 
 /* Widths for columns. */
 .row .col-1-3 {
-	width: 33.3333333%;
+	width: 33.33333333%;
+}
+
+.row .col-2-3 {
+	width: 66.66666666%;
 }
 
 .row .col-1-4 {
