--- a/css/foxnetsimplegrid.css
+++ b/css/foxnetsimplegrid.css
@@ -27,6 +27,8 @@ body {
 /* Container. */
 .container {
 	padding: 0 2%;
+	margin: 0 auto;
+	width: 100%;
 }	
 .container:after {
 	content: "";
@@ -48,10 +50,15 @@ img {
 
 @media only screen and (min-width: 40em) {
 
+/* Container max-width. */
+.container {
+	max-width: 64em;
+}	
+
 /* Rows. */
 .row {
-	margin: 0 auto;
-	max-width: 64em;
+	margin-left: -1.25em; /* the same as your gutter. */
+	/*max-width: 64em;*/
 }
 .row .col-1-3,
 .row .col-2-3,
@@ -60,7 +67,7 @@ img {
 .row .col-3-4,
 .row .col-1-1 {
 	float: left;
-	padding-right: 1.25em; /* 20px / 16px = 1.25 */
+	padding-left: 1.25em; /* 20px / 16px = 1.25 */
 }
 .row .col-1-3:last-of-type,
 .row .col-2-3:last-of-type,
@@ -69,7 +76,7 @@ img {
 .row .col-3-4:last-of-type,
 .row .col-1-1:last-of-type {
 	float: right;
-	padding-right: 0;
+	/*padding-right: 0; */
 }
 
 /* Widths for columns. */
@@ -105,8 +112,14 @@ img {
 
 @media only screen and (min-width: 74em) {
 
-.row {
+/* Container max-width. */
+.container {
+	padding: 0;
 	max-width: 70em;
+}
+
+.row {
+	/*max-width: 70em;*/
 }
 	
 }
